[metadata]
name = pytest-yapf3
description = Validate your Python file format with yapf
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
author = Yan QiDong
author_email = yanqd0@outlook.com
license = MIT
url = https://github.com/yanqd0/pytest-yapf3

[aliases]
test = pytest

[tool:pytest]
addopts =
    --verbose
    --cov pytest_yapf3
    --pep8
    --flake8
    --pylint
    --isort
    --yapf
    --docstyle
markers = pep8
python_files = tests/*
mock_use_standalone_module = true
docstyle_add_ignore = D204
docstyle_exclude = tests/*

[isort]
multi_line_output = 3
include_trailing_comma = true
known_first_party = pytest_yapf3

[yapf]
align_closing_bracket_with_visual_indent = true
based_on_style = pep8
coalesce_brackets = true
dedent_closing_brackets = true
